--- a/Meeting_Management/bin/Meeting_Management.dll.config
+++ b/Meeting_Management/bin/Meeting_Management.dll.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MeetingInfoDbContext" connectionString="metadata=res://*/Models.DataModels.csdl|res://*/Models.DataModels.ssdl|res://*/Models.DataModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUNTERXBD\SQLEXPRESS;initial catalog=MeetingInfo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MeetingInfoDbContext" connectionString="metadata=res://*/Models.DataModels.csdl|res://*/Models.DataModels.ssdl|res://*/Models.DataModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-I26VGT7;initial catalog=MeetingInfo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
